option('with-egl',       type : 'combo', choices : ['auto', 'no', 'yes'], value : 'auto')
option('with-wgl',       type : 'combo', choices : ['auto', 'no', 'yes'], value : 'auto')
option('with-gles1',     type : 'combo', choices : ['auto', 'no', 'yes'], value : 'auto')
option('with-gles2',     type : 'combo', choices : ['auto', 'no', 'yes'], value : 'auto')
option('with-vg',        type : 'combo', choices : ['auto', 'no', 'yes'], value : 'auto')
option('with-osmesa',    type : 'combo', choices : ['auto', 'no', 'yes'], value : 'auto')
option('with-libdrm',    type : 'combo', choices : ['auto', 'no', 'yes'], value : 'auto')
option('with-x11',       type : 'combo', choices : ['auto', 'no', 'yes'], value : 'auto')
option('with-wayland',   type : 'combo', choices : ['auto', 'no', 'yes'], value : 'auto')
option('with-gbm',       type : 'combo', choices : ['auto', 'no', 'yes'], value : 'auto')
option('with-freetype2', type : 'combo', choices : ['auto', 'no', 'yes'], value : 'auto')
option('with-rbug',      type : 'boolean', value : false)
option('mesa-sourcedir', type : 'string', value : 'none')
