# Copyright © 2017 Intel Corporation

# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:

# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.

# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

subdir('util')
# TODO: data is just install targets
subdir('demos')
if with_egl
  subdir('egl')
endif
subdir('fp')
subdir('fpglsl')
subdir('glsl')
subdir('gs')
subdir('objviewer')
if with_osmesa
  subdir('osdemos')
endif
subdir('perf')
if with_rbug
  subdir('rbug')
endif
subdir('redbook')
subdir('samples')
subdir('slang')
subdir('tests')
subdir('tools')
subdir('trivial')
subdir('vp')
subdir('vpglsl')
if with_wgl
  subdir('wgl')
endif
if with_x11
  subdir('xdemos')
endif
